# password_vault

./: .gitignore  Encryption.ipynb  README.md  app.py  file_to_encrypt.txt  pyproject.toml  requirements.txt
src/: database.py  encryption.py
templates/: base.html  home.html
tests/: conftest.py  test_vault.py
