[project]
name = "password-vault"
version = "0.1.0"
description = "A Flask-based password vault with Fernet encryption"
authors = [
    {name = "md-experiments"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "flask (==2.2.5)",
    "werkzeug (==3.1.6)",
    "cryptography (==46.0.6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
